@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinChan.c,v 1.58 2010/09/08 21:02:41 dgp Exp $
+ * RCS: @(#) $Id: tclWinChan.c,v 1.59 2010/09/13 14:20:39 nijtmans Exp $
  */
 
 #include "tclWinInt.h"
@@ -915,7 +915,7 @@ TclpOpenFileChannel(
 	    flags = FILE_ATTRIBUTE_READONLY;
 	}
     } else {
-	flags = tclWinProcs->getFileAttributesProc(nativeName);
+	flags = GetFileAttributes(nativeName);
 	if (flags == 0xFFFFFFFF) {
 	    flags = 0;
 	}
@@ -931,7 +931,7 @@ TclpOpenFileChannel(
      * Now we get to create the file.
      */
 
-    handle = tclWinProcs->createFileProc(nativeName, accessMode, shareMode,
+    handle = CreateFile(nativeName, accessMode, shareMode,
 	    NULL, createMode, flags, (HANDLE) NULL);
 
     if (handle == INVALID_HANDLE_VALUE) {
